tests/ui/feature-gates/feature-gate-shorter_tail_lifetimes.stderr
error[E0597]: `c` does not live long enough
  --> $DIR/feature-gate-shorter_tail_lifetimes.rs:3:5
   |
LL |     let c = std::cell::RefCell::new("..");
   |         - binding `c` declared here
LL |     c.borrow().len()
   |     ^---------
   |     |
   |     borrowed value does not live long enough
   |     a temporary with access to the borrow is created here ...
LL | }
   | -
   | |
   | `c` dropped here while still borrowed
   | ... and the borrow might be used here, when that temporary is dropped and runs the destructor for type `Ref<'_, &str>`
   |
   = note: the temporary is part of an expression at the end of a block;
           consider forcing this temporary to be dropped sooner, before the block's local variables are dropped
help: for example, you could save the expression's value in a new local variable `x` and then make `x` be the expression at the end of the block
   |
LL |     let x = c.borrow().len(); x
   |     +++++++                 +++

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0597`.
