tests/ui/feature-gates/feature-gate-shorter_tail_lifetimes.rs
fn f() -> usize {
    let c = std::cell::RefCell::new("..");
    c.borrow().len() //~ ERROR: `c` does not live long enough
}

fn main() {
    let _ = f();
}
